--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "commonjs",
     "scripts": {
         "dev": "webpack --mode development",
-        "prod": "webpack --mode production"
+        "build": "webpack --mode production"
     },
     "repository": {
         "type": "git",
@@ -34,6 +34,7 @@
         "webpack-cli": "^6.0.1"
     },
     "dependencies": {
+        "@modelcontextprotocol/sdk": "^1.6.1",
         "write-file-atomic": "^6.0.0"
     }
 }
