--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,16 @@
 {
     "compilerOptions": {
-        "target": "ESNext",
-        "module": "ESNext",
-        "moduleResolution": "Node",
+        "target": "ES2020",
+        "module": "commonjs",
+        "moduleResolution": "node",
         "resolveJsonModule": true,
-        "outDir": "./out",
+        "outDir": "./dist",
         "strict": true,
         "esModuleInterop": true,
         "sourceMap": true,
-        "forceConsistentCasingInFileNames": true
+        "forceConsistentCasingInFileNames": true,
+        "declaration": true,
+        "skipLibCheck": true
     },
     "include": [
         "src/**/*.ts",
